fix: Fix missing header image on Firefox

--- a/styles/layout/header.css
+++ b/styles/layout/header.css
@@ -37,16 +37,23 @@
             var(--header-gradient-color-bottom)
         ),
         url('../../images/tiles-sm_1x.jpg');
-    background-image: linear-gradient(
-            to right bottom,
-            var(--header-gradient-color-top),
-            var(--header-gradient-color-bottom)
-        ),
-        -webkit-image-set(url(../../images/tiles-sm_1x.jpg) 1x, url(../../images/tiles-sm_2x.jpg)
-                    2x);
+
     background-size: cover;
     width: 100%;
     height: 100vh;
+}
+
+@supports (background-image: image-set(url(''))) or
+    (background-image: -webkit-image-set(url(''))) {
+    .header {
+        background-image: linear-gradient(
+                to right bottom,
+                var(--header-gradient-color-top),
+                var(--header-gradient-color-bottom)
+            ),
+            -webkit-image-set(url(../../images/tiles-sm_1x.jpg) 1x, url(../../images/tiles-sm_2x.jpg)
+                        2x);
+    }
 }
 
 .header__headline {
@@ -120,13 +127,19 @@
                 var(--header-gradient-color-bottom)
             ),
             url('../../images/tiles-md_1x.jpg');
-        background-image: linear-gradient(
-                to right bottom,
-                var(--header-gradient-color-top),
-                var(--header-gradient-color-bottom)
-            ),
-            -webkit-image-set(url(../../images/tiles-md_1x.jpg) 1x, url(../../images/tiles-md_2x.jpg)
-                        2x);
+    }
+
+    @supports (background-image: image-set(url(''))) or
+        (background-image: -webkit-image-set(url(''))) {
+        .header {
+            background-image: linear-gradient(
+                    to right bottom,
+                    var(--header-gradient-color-top),
+                    var(--header-gradient-color-bottom)
+                ),
+                -webkit-image-set(url(../../images/tiles-md_1x.jpg) 1x, url(../../images/tiles-md_2x.jpg)
+                            2x);
+        }
     }
 
     .header__intro-container {
@@ -146,13 +159,19 @@
                 var(--header-gradient-color-bottom)
             ),
             url('../../images/tiles-lg_1x.jpg');
-        background-image: linear-gradient(
-                to right bottom,
-                var(--header-gradient-color-top),
-                var(--header-gradient-color-bottom)
-            ),
-            -webkit-image-set(url(../../images/tiles-lg_1x.jpg) 1x, url(../../images/tiles-lg_2x.jpg)
-                        2x);
+    }
+
+    @supports (background-image: image-set(url(''))) or
+        (background-image: -webkit-image-set(url(''))) {
+        .header {
+            background-image: linear-gradient(
+                    to right bottom,
+                    var(--header-gradient-color-top),
+                    var(--header-gradient-color-bottom)
+                ),
+                -webkit-image-set(url(../../images/tiles-lg_1x.jpg) 1x, url(../../images/tiles-lg_2x.jpg)
+                            2x);
+        }
     }
 }
 
@@ -165,13 +184,19 @@
                 var(--header-gradient-color-bottom)
             ),
             url('../../images/tiles-xl_1x.jpg');
-        background-image: linear-gradient(
-                to right bottom,
-                var(--header-gradient-color-top),
-                var(--header-gradient-color-bottom)
-            ),
-            -webkit-image-set(url(../../images/tiles-xl_1x.jpg) 1x, url(../../images/tiles-xl_2x.jpg)
-                        2x);
+    }
+
+    @supports (background-image: image-set(url(''))) or
+        (background-image: -webkit-image-set(url(''))) {
+        .header {
+            background-image: linear-gradient(
+                    to right bottom,
+                    var(--header-gradient-color-top),
+                    var(--header-gradient-color-bottom)
+                ),
+                -webkit-image-set(url(../../images/tiles-xl_1x.jpg) 1x, url(../../images/tiles-xl_2x.jpg)
+                            2x);
+        }
     }
 
     .header__intro-container {
